# openclaw

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  MIGRATION.md  PROJECTS.md  README.md  SECURITY.md  SOUL.md  TOOLS.md  merge-intake-v2026.3.22-beta.1.md  open_pr.py  openclaw-setup.sh  package.json  push_audit_files.py  pyproject.toml
.agents/notes/: expo-app-design-workspace-install.md
.github/: costclaw-operating-rhythm.yml
.github/scripts/: validate_projects.py
.github/upstream-watch/: config.json  report-template.md
.github/workflows/: auto-response.yml  ci.yml  cto-control-center.yml  docker-release.yml  install-smoke.yml  labeler.yml  pages.yml  stale.yml  upstream-watch.yml  validate-projects.yml
agents/costclaw/: AGENT.md  CHANGE_RECOMMENDATION_TEMPLATE.md  KPIS.md  MASTER_PROMPT.md  OPERATING_RHYTHM.md  (+2 more)
audit/: all_files.txt  daily-ceo-brief-verification-2026-03-14.md  git_tracked_files.txt  system-update-audit-2026-03-14.md
codex_workflow/: .env.example  README.md  config.schema.json  config.yaml  preflight.sh  repro_steps.txt  run_workflow.sh  smoke_test.sh  validate_inputs.py
config/: base.yaml  development.yaml  test.yaml
docs/: docs.json
eldon/: README.md  config.yaml  mypy.ini  ruff.toml
eldon/config/: Makefile  config.yaml  config.yaml.example  env.example  main.py  pyproject.toml  requirements.txt
examples/: codex_task_item.json  n8n_ingestion_payload.json  openclaw-agent-manifest.json
mission-control/: README.md  index.html  mc.css  mc.js
outputs/: parcels.geojson  validation_report.json
projects/: _schema.yaml  index.yaml
schemas/: parcels.schema.json  task_item.schema.json
scripts/: auth-monitor.sh  doctor.py  fix-local-dev-remote.sh  install-openclaw-systemd-service.sh  memory-lifecycle.ts  ops-hardening-check.ts  pr-env-doctor  preflight.py  termux-auth-widget.sh  upstream-watch.ts  validate-python.sh  validate_geojson.py  whatsapp-access-smoke.ts
src/: index.ts
(+474 files in other folders)
